# realraw

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/libraw-sys/: .cargo_vcs_info.json  Cargo.toml  build.rs
crates/libraw-sys/src/: lib.rs
scripts/: package.sh
src/: export.rs  lib.rs  main.rs  photo_ops.rs  thumb_grid.rs
src/app/: about_dialog.rs  app.rs  central.rs  develop.rs  library.rs  menubar.rs  mod.rs  setup_dialog.rs  toasts.rs
src/catalog/: mod.rs  preview_cache.rs  thumbnail_cache.rs
src/develop/: decode.rs  mod.rs  pipeline.rs  preview.rs  settings.rs
src/gpu/: backend.rs  compile.rs  context.rs  mod.rs  pipeline.rs  stage_cache.rs
src/gpu/shaders/: tone.wgsl
src/import/: dialog.rs  thumbnail.rs  worker.rs  xmp.rs
