[package]
name = "realraw"
version = "0.1.0"
edition = "2024"
description = "An open source Lightroom alternative"
authors = ["marcelsker"]
repository = "https://codeberg.org/sker/realraw"
license = "AGPL-3.0-or-later"
default-run = "realraw"

[package.metadata.bundle]
name = "realraw"
identifier = "com.sker.realraw"
icon = ["assets/icon.icns", "assets/icon.ico"]
category = "Photography"
copyright = "AGPL-3.0-or-later"

[lib]
name = "realraw"
path = "src/lib.rs"

[[bin]]
name = "realraw"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
refinery = { version = "0.8", features = ["rusqlite"] }
rfd = "0.15"
directories = "5"
time = { version = "0.3", features = ["formatting", "macros"] }
thiserror = "1"
kamadak-exif = "0.6"
sha1 = "0.11"
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "rayon"] }
jpeg-decoder = "0.3"
hex = "0.4"
rawler = "0.7"
egui-phosphor = "0.9"

[package.metadata.appimage]
icon = "assets/icon-64.png"

[package.metadata.deb]
maintainer = "marcelsker"
depends = "$auto"
section = "graphics"
priority = "optional"
assets = [
    ["target/release/realraw", "usr/bin/", "755"],
    ["assets/icon-2048.png", "usr/share/icons/hicolor/2048x2048/apps/realraw.png", "644"],
    ["assets/icon-64.png", "usr/share/icons/hicolor/64x64/apps/realraw.png", "644"],
    ["assets/realraw.desktop", "usr/share/applications/", "644"],
]

[build-dependencies]
embed-resource = "3"

[dev-dependencies]
tempfile = "3"
